Reworked views: removed redundant html tags
This commit moves unnecessary  and redudant tags (e.g. a .col-md-12 in a .row or a .row within a .row) A further reduction of tag-use in the individual views was achieved by moving the common container divs into _Layout.

This also fixes some responsive design issues in the admin view.

--- a/ModuleManager.Web/Views/Shared/_Layout.cshtml
+++ b/ModuleManager.Web/Views/Shared/_Layout.cshtml
@@ -47,7 +47,11 @@
     </header>
 
     <div id="content" role="content">
-        @RenderBody() <!--Here is where the actual page is loaded-->
+        <div class="container">
+            <div class="primary">
+                @RenderBody() <!--Here is where the actual page is loaded-->
+            </div>
+        </div>
     </div>
 
     <footer id="footer">
