--- a/ModuleManager.Web/Views/Admin/Curriculum/Competentie/_Add.cshtml
+++ b/ModuleManager.Web/Views/Admin/Curriculum/Competentie/_Add.cshtml
@@ -24,7 +24,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Beschrijving) <small>('$$' voor regeleinde)</small>
+            @Html.LabelFor(model => model.Beschrijving)
             @Html.TextAreaFor(model => model.Beschrijving, new { @class = "form-control" })
             @Html.ValidationMessageFor(model => model.Beschrijving, "", new { @class = "text-danger" })
         </div>
