--- a/ModuleManager.Web/Views/Admin/Curriculum/Competentie/_Details.cshtml
+++ b/ModuleManager.Web/Views/Admin/Curriculum/Competentie/_Details.cshtml
@@ -1,4 +1,5 @@
 ﻿@using ModuleManager.Domain
+@using ModuleManager.Web.Helpers
 @model  ModuleManager.Domain.Competentie
 
 <div class="modal-header">
@@ -29,14 +30,7 @@
             </dt>
 
             <dd>
-                @{
-                    string[] competenties = null;
-                    competenties = Model.Beschrijving.Split(new string[] { "$$" }, StringSplitOptions.None);
-                }
-                @foreach (string comptentie in competenties)
-                {
-                    @comptentie<br />
-                }
+                @Html.FormatLongText(Model.Beschrijving)
             </dd>
 
         </dl>
