--- a/ModuleManager.Web/Views/Module/Edit.cshtml
+++ b/ModuleManager.Web/Views/Module/Edit.cshtml
@@ -399,18 +399,14 @@
                         </table>
                     </td>
                 </tr>
-
+                <tr>
+                    <th>Status</th>
+                    <td>
+                        @Html.DropDownListFor(item => item.Module.Status, selectList: Model.Options.Statussen.Select(s => new SelectListItem { Value=s.Status1, Text= s.Status1}), htmlAttributes: new { @class = "form-control" })
+                    </td>
+                </tr>
             </tbody>
         </table>
-    </div>
-
-    <div class="form-group">
-        <label for="status">Status</label>
-        <div id="status" class="checkbox" style="padding-left: 10px;">
-            <label>
-                <input name="Module.IsCompleted" type="checkbox" @(Model.Module.IsCompleted.GetValueOrDefault(false) ? "checked" : "") value="true">Compleet?
-            </label>
-        </div>
     </div>
 
     <button name="afterSubmit" value="stay" type="submit" class="btn btn-success btn-lg">Opslaan</button>
