Added FormatLongText extension method to format longer text
This extension method gives HtmlHelper the ability to format long text. It does by detecting paragraphs, which are assumed to be separated by two \n's and embeds them in p-tags.

It then replaces any remaining new lines with br-tags.

First use in Module/Details.cshtml

--- a/ModuleManager.Web/Views/Module/Details.cshtml
+++ b/ModuleManager.Web/Views/Module/Details.cshtml
@@ -14,6 +14,7 @@
     
     if (@Model != null)
     {
+        //TODO: Fix this code; this use of exceptions scares me
         // Jaartal
         var j1 = Model.Schooljaar.Remove(Model.Schooljaar.Length - 2);
         var j2 = Model.Schooljaar.Remove(0, 2);
@@ -78,7 +79,7 @@
 
 <h2 style="margin-top: 0">@Model.Naam</h2>
 <h3>Beschrijving</h3>
-<p>@Model.Beschrijving</p>
+<p>@Html.FormatLongText(Model.Beschrijving)</p>
 <h3>Algemene informatie</h3>
 <table class="table table-bordered">
     <tbody>
