Admin index user management now under right category

--- a/ModuleManager.Web/Views/Admin/Index.cshtml
+++ b/ModuleManager.Web/Views/Admin/Index.cshtml
@@ -10,7 +10,7 @@
 <div class="row">
     <div class="col-md-3 category">
         <a class="btn btn-lg btn-primary btn-block" href="@Url.Action("Curriculum", "Admin")">
-            <i class="fa fa-cogs"></i> Beheer
+            <i class="fa fa-cogs"></i> Beheer Curriculum
         </a>
     </div>
 
@@ -22,16 +22,17 @@
 </div>
 
 <h3>Gebruikers</h3>
+<div class="row">
+    <div class="col-md-3 category">
+        <a class="btn btn-lg btn-primary btn-block" href="@Url.Action("UserOverview", "Admin")">
+            <i class="fa fa-cogs"></i> Beheer Gebruikers
+        </a>
+    </div>
+</div>
 
 <h3>Modules</h3>
 
 <div class="row">
-    <div class="col-md-3 category">
-        <a class="btn btn-lg btn-primary btn-block" href="@Url.Action("UserOverview", "Admin")">
-            <i class="fa fa-cogs"></i> Beheer
-        </a>
-    </div>
-
     <div class="col-md-3 category">
         <a class="btn btn-lg btn-success btn-block" href="@Url.Action("CheckModules", "Admin")">
             <i class="fa fa-cog"></i> Controle
