kleine fixjes tijdens testen
Related Work Items: #189

--- a/ModuleManager.Web/Views/Module/Edit.cshtml
+++ b/ModuleManager.Web/Views/Module/Edit.cshtml
@@ -218,7 +218,7 @@
                                     <th>Activiteit</th>
                                     <th>Duur</th>
                                     <th>Frequentie</th>
-                                    <th>Contacturen</th>
+                                    <th>Uren</th>
                                     <th>SBU</th>
                                     <th></th>
                                 </tr>
