--- a/ModuleManager.Web/Views/Admin/Curriculum/Module/_Add.cshtml
+++ b/ModuleManager.Web/Views/Admin/Curriculum/Module/_Add.cshtml
@@ -106,7 +106,7 @@
         <div class="row">
             <div class="col-md-10">
                 <div class="form-group">
-                    @Html.LabelFor(model => model.Icons)
+                    Icon
                     <select name="Icon" class="form-control ajax" id="Icon">
                         @foreach (var icon in Model.Icons)
                         {
