--- a/ModuleManager.Web/Views/Admin/Curriculum.cshtml
+++ b/ModuleManager.Web/Views/Admin/Curriculum.cshtml
@@ -32,9 +32,9 @@
                         <td class="ninety-width">@item.Code</td>
                         <td>@item.Naam</td>
                         <td class="actions" style="width:118px">
-                            @Html.NoEncodeActionLink("<span i class='fa fa-info'></span>", "Details", "Details", "Competenties", routeValues: new { code = item.Code, schooljaar = item.Schooljaar }, htmlAttributes: new { data_modal = "", @class = "btn btn-info btn-sm" })
-                            @Html.NoEncodeActionLink("<span i class='fa fa-pencil'></span>", "Bewerken", "Edit", "Competenties", routeValues: new { code = item.Code, schooljaar = item.Schooljaar }, htmlAttributes: new { data_modal = "", @class = "btn btn-warning btn-sm" })
-                            @Html.NoEncodeActionLink("<span i class='fa fa-trash'></span>", "Verwijderen", "Delete", "Competenties", routeValues: new { code = item.Code, schooljaar = item.Schooljaar }, htmlAttributes: new { data_modal = "", @class = "btn btn-danger btn-sm" })
+                            @Html.NoEncodeActionLink("<span i class='fa fa-info'></span>", "Details", "Details", "Competenties", routeValues: new { code = item.Code }, htmlAttributes: new { data_modal = "", @class = "btn btn-info btn-sm" })
+                            @Html.NoEncodeActionLink("<span i class='fa fa-pencil'></span>", "Bewerken", "Edit", "Competenties", routeValues: new { code = item.Code }, htmlAttributes: new { data_modal = "", @class = "btn btn-warning btn-sm" })
+                            @Html.NoEncodeActionLink("<span i class='fa fa-trash'></span>", "Verwijderen", "Delete", "Competenties", routeValues: new { code = item.Code }, htmlAttributes: new { data_modal = "", @class = "btn btn-danger btn-sm" })
                         </td>
                     </tr>
                 }
@@ -96,7 +96,7 @@
                     <tr class="leerlijn-item">
                         <td>@item.Naam</td>
                         <td class="actions" style="width:45px;">
-                            @Html.NoEncodeActionLink("<span i class='fa fa-trash'></span>", "Verwijderen", "Delete", "Leerlijnen", routeValues: new { naam = item.Naam, schooljaar = item.Schooljaar }, htmlAttributes: new { data_modal = "", @class = "btn btn-danger btn-sm" })
+                            @Html.NoEncodeActionLink("<span i class='fa fa-trash'></span>", "Verwijderen", "Delete", "Leerlijnen", routeValues: new { naam = item.Naam }, htmlAttributes: new { data_modal = "", @class = "btn btn-danger btn-sm" })
                         </td>
                     </tr>
                 }
