--- a/ModuleManager.Web/Views/Module/Edit.cshtml
+++ b/ModuleManager.Web/Views/Module/Edit.cshtml
@@ -416,7 +416,7 @@
 }
 
 <!-- Help MODAL-->
-@Html.Partial("~/Views/Help/ModuleEdit.cshtml", null);
+@Html.Partial("~/Views/Help/ModuleEdit.cshtml", null)
 
 <!-- JAVA MEUK -->
 @section Scripts {
