--- a/ModuleManager.Web/Views/Shared/_Layout.cshtml
+++ b/ModuleManager.Web/Views/Shared/_Layout.cshtml
@@ -60,8 +60,18 @@
         </div>
     </footer>
 
-    @Scripts.Render("~/bundles/scripts/main")
-    @RenderSection("Scripts", false)
+    <div class="navbar navbar-default navbar-fixed-bottom">
+        <div class="container-fluid text-center">
+            <form class="navbar-form">
+                <a target="_blank" class="btn btn-warning" href="https://goo.gl/forms/VN0ZPDN8L4nQFPPD2">Feedback? Deel het met ons!</a>
+            </form>
+        </div>
+    </div>
+
+
+
+        @Scripts.Render("~/bundles/scripts/main")
+        @RenderSection("Scripts", false)
 
 
 </body>
