--- a/ModuleManager.Web/Views/Module/Overview.cshtml
+++ b/ModuleManager.Web/Views/Module/Overview.cshtml
@@ -17,7 +17,7 @@
                 <div id="search" class="input-group">
                     <input id="Zoekterm" name="filters.Zoekterm" type="text" class="form-control search-query ajax" placeholder="Zoekterm" />
                     <span class="input-group-btn">
-                        <button class="btn btn-default btn-search" type="button"><i class="fa fa-search"></i></button>
+                        <button class="btn btn-default btn-search" type="submit"><i class="fa fa-search"></i></button>
                     </span>
                 </div>
 
