Bug: Informaticamodules 1 woord gemaakt.

--- a/ModuleManager.Web/Views/Home/Index.cshtml
+++ b/ModuleManager.Web/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿<div class="row">
     <div class="col-md-8 col-md-offset-2 text-center">
-        <h1 style="font-size: 4em">Informatica Modules</h1><br />
+        <h1 style="font-size: 4em">Informaticamodules</h1><br />
         <!--<input name="search" type="text" class="form-control search-query ajax input-lg" placeholder="Zoekterm" />-->
         <div class="text-center">
             <a class="btn btn-default fa-button-big" href="@Url.Action("Index","StudieGids")"><i class="fa fa-table fa-big"></i><br />Lessentabellen</a>
