--- a/ModuleManager.Web/Views/Shared/_Layout.cshtml
+++ b/ModuleManager.Web/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Informatica Modules - Avans Hogeschool</title>
+    <title>Informaticamodules - Avans Hogeschool</title>
 
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <link href="~/Content/font-awesome.min.css" rel="stylesheet" type="text/css" />
@@ -56,7 +56,7 @@
 
     <footer id="footer">
         <div class="container">
-            <p>"Informatica Modules" is een onderdeel van <a href="http://avans.nl/">Avans University</a>.</p>
+            <p>"Informaticamodules" is een onderdeel van <a href="http://avans.nl/">Avans University</a>.</p>
         </div>
     </footer>
 
